--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-design-icons-iconfont": "^6.7.0",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
+    "openai": "^5.10.2",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.0-beta.1"
   }
